<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_general">

    <Button
        android:id="@+id/button_browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_browse" />

    <Button
        android:id="@+id/button_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_call" />

    <Button
        android:id="@+id/button_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_send_text_message" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_share" />

    <Button
        android:id="@+id/button_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_send_email" />

    <Button
        android:id="@+id/button_go_to_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_goto_second_activity" />


</LinearLayout>